# one-liner

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tag_and_publish.yml  test_lint_type.yml
docs/: index.md
docs/api/: client.md  server.md
docs/source/: conf.py  modules.rst  one_liner.rst
examples/: README.md
examples/broadcast_app_regulated/: server.py
examples/get_server_schema/: client.py  server.py
examples/real_time_plot/: client.py  client_ui.py  server.py
examples/real_time_plot_many_freqs/: README.md  client.py  server.py
examples/relay_zmq_video_stream/: client.py  server.py
examples/router_real_time_plot/: client.py  server.py
examples/rpc/adapter/: README.md  adapter.py  instrument.py  instrument_utils.py
examples/rpc/handle_remote_exception/: client.py  server.py
examples/stream_h264_video/: client.py  server.py
examples/stream_raw_video/: ffmpeg_example.py  ffmpeg_modify_stream.py  ffmpeg_to_opencv_video_feed.py  server.py
examples/stream_video_opencv/: server.py
examples/streaming/broadcast_app_regulated/: client.py  server.py
examples/streaming/real_time_plot_many_freqs/: server.py
examples/streaming/relay_zmq_video_stream/: async_client.py  client.py  server.py
examples/streaming/router_real_time_plot/: README.md  client.py  ctrl_client.py  server.py
examples/streaming/stream_raw_video/: client.py  server.py
src/one_liner/: __init__.py  async_client.py  client.py  rpc_server.py  server.py  stream_schema.py  stream_server.py  utils.py
tests/: cache_vs_queue_tests.py  test_cache_vs_queue.py  test_rpc_named_call.py  test_zmq_broadcaster.py  test_zmq_receiver.py  test_zmq_router.py  version_check_tests.py  zmq_broadcaster_tests.py  zmq_receiver_tests.py  zmq_router_tests.py
(+2 files in other folders)
