[project]
name = "one_liner"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=8.3.5",
    "pyzmq>=27.0.2",
    "ruff>=0.9.9",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
examples = [
    "ffmpeg-python>=0.2.0",
    "gr>=1.30.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pyqt6>=6.9.1",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo',
    'docutils'
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 88