[project]
name = "one_liner"
version = "0.1.1.dev1"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blosc2>=3.11.0",
    "orjson>=3.11.4",
    "pydantic>=2.11.7",
    "pyzmq>=27.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
examples = [
    "ffmpeg-python>=0.2.0",
    "gr>=1.30.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pyqt6>=6.9.1",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo',
    'docutils'
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 88
